<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText 
        android:id="@+id/user_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_seu_nome_hint"
        android:inputType="textCapWords"
        />
    
    <EditText 
        android:id="@+id/comentario_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comentario_hint"
        android:inputType="textCapSentences"
        />
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/intensidade_hint"
        />
    
    <RatingBar 
        android:id="@+id/intensidade_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        />
    
    <Button 
        android:id="@+id/add_relatorio_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inserir_nome_label"
        />
    
</LinearLayout>
